# hxckr-core

./: .cspell.json  .dockerignore  .env.sample  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build-image.nix  devbox.json  entrypoint.dev.sh  flake.nix  typos.toml
.github/workflows/: docker-publish.yml  spellcheck.yml
migrations/2024-08-23-174334_create_users/: up.sql
migrations/2024-08-27-153454_create-challenges-table/: down.sql  up.sql
migrations/2024-08-27-184211_create-exercises-table/: down.sql  up.sql
migrations/2024-08-28-101632_create-progress-table/: down.sql  up.sql
migrations/2024-08-28-120404_add-status-to-exercises-table/: down.sql  up.sql
migrations/2024-08-28-124527_add-repo-submissions-table/: down.sql  up.sql
migrations/2024-08-29-115617_add-sessions-table/: up.sql
migrations/2024-08-29-132507_add-leaderboards-table/: down.sql  up.sql
migrations/2024-08-30-130036_alter-leaderboard-table/: down.sql  up.sql
migrations/2024-08-30-141542_add-updated-at-trigger-function/: down.sql  up.sql
migrations/2024-09-16-134621_add-soft-serve-url/: down.sql  up.sql
migrations/2024-11-02-132616_add-challenge-module-count/: down.sql  up.sql
migrations/2024-11-21-133933_add-expected-module-total-score/: down.sql  up.sql
migrations/2024-11-28-023636_add-language-to-repositories/: down.sql  up.sql
migrations/2024-11-28-031739_add-repo-urls-to-challenge/: down.sql  up.sql
migrations/2024-11-28-101722_remove-repo-url-from-challenge/: down.sql  up.sql
migrations/2024-11-28-145607_add-relation-between-repository-progress/: down.sql  up.sql
migrations/2024-11-28-162003_update-existing-progress/: down.sql  up.sql
src/: main.rs  schema.rs
src/app/: mod.rs
(+37 files in other folders)
