[package]
name = "hxckr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "serde_json"] }
dotenvy = "0.15"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "1.0.63"
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "=1.0.1"
