[package]
name = "hxckr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
dotenvy = "0.15"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
thiserror = "1.0.63"
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
actix-web = { version = "4", features = ["macros"] }
futures-util = "0.3.30"
rand = "0.8.5"
actix-ws = "0.3.0"
tokio = { version = "1.35.0", features = ["full", "macros"] }
reqwest = { version = "0.12.7", features = ["json"] }
lapin = "2.1.0"
actix-cors = "0.7.0"
